# langchain-scrapeless

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: tools.ipynb
langchain_scrapeless/: __init__.py  const.py  error_messages.py  utils.py  wrappers.py
langchain_scrapeless/tools/: __init__.py  scrapeless_universal_scraping.py
langchain_scrapeless/tools/clawer/: __init__.py  crawl.py  scrape.py
langchain_scrapeless/tools/scraping_api/: __init__.py  google_search.py  google_trends.py
scripts/: release.py
tests/integration_tests/: test_tools.py
tests/unit_tests/: test_tools.py
