[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langchain-scrapeless"
version = "0.1.1"
description = "An integration package connecting Scrapeless and LangChain"
authors = ["scrapelessteam@gmail.com"]
readme = "README.md"
repository = "https://github.com/scrapeless-ai/langchain-scrapeless"
license = "MIT"
keywords = ["scrapeless", "langchain", "integration", "universal scraping api", "scraping", "crawl"]

[tool.mypy]
disallow_untyped_defs = "True"

[tool.poetry.urls]
"Scrapeless Homepage" = "https://scrapeless.com"
"Source Code" = "https://github.com/scrapeless-ai/langchain-scrapeless/tree/main"
"Release Notes" = "https://github.com/scrapeless-ai/langchain-scrapeless/releases?expanded=true"
"Issue Tracker" = "https://github.com/scrapeless-ai/langchain-scrapeless/issues"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = "^0.3.15"
jupyter = "^1.1.1"
scrapeless = "1.1.1"
python-dotenv = "^1.1.1"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-socket = "^0.7.0"
pytest-watcher = "^0.3.4"
langchain-tests = "^0.3.5"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.6"

[tool.poetry.group.test_integration.dependencies]

[tool.poetry.group.lint.dependencies]
ruff = "^0.5"

[tool.poetry.group.typing.dependencies]
mypy = "^1.10"
